<resources>
    <string name="main_page">RU Pizzeria</string>
    <string name="current_order_activity">Current Order</string>
    <string name="button_text1">Enter</string>
    <string name="button_text2">Change</string>
    <string name="button_text3">Order Deluxe Pizza</string>
    <string name="button_text4">Order Hawaiian Pizza</string>
    <string name="button_text5">Order Pepperoni Pizza</string>
    <string name="button_text6">Add</string>
    <string name="button_text7">Remove</string>
    <string name="button_text8">Add Order</string>
    <string name="number">Customer Phone #</string>
    <string name="orderCart">Order Cart</string>
    <string name="orderView">Order View</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="subtotal">SubTotal:</string>
    <string name="remove">Remove</string>
    <string name="place">Place Order</string>
    <string name="text_view1">Select Pizza Size:</string>
    <string name="text_view2">All Toppings:</string>
    <string name="text_view3">Selected Pizza Toppings:</string>
    <string name="text_view4">Price:</string>
    <string name="text_view5">price</string>
    <string name="text_view6">Customer Phone Number:</string>
    <string name="order_cart">Order Cart </string>
    <string name="order_view">Order View </string>
</resources>