<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/remove"
        android:textColor="#424242"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="618dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/total"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="630dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="79dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="630dp" />

    <ListView
        android:layout_width="297dp"
        android:layout_height="461dp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_margin="10dp"
        android:width="3dp"
        android:text="@string/number"
        android:textSize="16sp"
        app:autoSizeMaxTextSize="0dp"
        app:autoSizeMinTextSize="0dp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_margin="10dp"
        android:width="3dp"
        android:text="@string/orderView"
        android:textSize="20sp"
        app:autoSizeMaxTextSize="0dp"
        app:autoSizeMinTextSize="0dp"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="16dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="178dp"
        android:layout_height="53dp"
        android:contentDescription="Hello"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="60dp" />
</androidx.constraintlayout.widget.ConstraintLayout>