<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="36dp"
        android:text="@string/place"
        android:textColor="#424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="88dp"
        android:text="@string/remove"
        android:textColor="#424242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        tools:layout_editor_absoluteY="573dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="36dp"
        android:text="@string/total"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="68dp"
        android:layout_height="26dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:text="@string/subtotal"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="79dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:layout_marginTop="11dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic"
        tools:layout_editor_absoluteX="130dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="79dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        tools:layout_editor_absoluteX="130dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="79dp"
        android:layout_height="22dp"
        android:layout_margin="10dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="649dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="11dp"
        android:text="@string/tax"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="117dp"
        android:layout_height="32dp"
        android:layout_margin="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="122dp"
        android:layout_height="54dp"
        android:layout_margin="10dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:width="3dp"
        android:text="@string/number"
        android:textSize="16sp"
        app:autoSizeMaxTextSize="0dp"
        app:autoSizeMinTextSize="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_margin="10dp"
        android:width="3dp"
        android:text="@string/orderCart"
        android:textSize="20sp"
        app:autoSizeMaxTextSize="0dp"
        app:autoSizeMinTextSize="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:layout_width="289dp"
        android:layout_height="395dp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="387dp"
        android:layout_height="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="279dp"
        android:layout_height="17dp"
        android:layout_marginTop="7dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>