<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="3dp">

    <ScrollView
        android:layout_width="405dp"
        android:layout_height="160dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/orderView"
                android:textSize="16sp" />

            <TableRow
                android:layout_width="398dp"
                android:layout_height="74dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="143dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/number" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="183dp"
                    android:layout_height="51dp"
                    android:contentDescription="Hello"
                    android:gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

    <TableRow
        android:id="@+id/listView2"
        android:layout_width="410dp"
        android:layout_height="208dp"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteY="165dp">

    </TableRow>

    <TableRow
        android:layout_width="420dp"
        android:layout_height="54dp"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/listView2"
        tools:layout_editor_absoluteX="-7dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textColor="#424242" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>