<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="391dp"
        android:layout_height="805dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_height="100dp">

            <TextView
                android:layout_height="match_parent"
                android:layout_column="1"
                android:paddingTop="20dp"
                android:text="Customer Phone Number:" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:paddingLeft="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:hint=""
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_height="100dp"
            android:paddingTop="5dp">

            <Button
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/button_text1" />

            <Button
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="50dp"
                android:text="@string/button_text2" />
        </TableRow>

        <TableRow
            android:layout_height="100dp"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:src="@drawable/deluxeimg" />

            <Button
                android:id="@+id/deluxe"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/button_text3"
                android:onClick="createDeluxeOrder"/>

        </TableRow>

        <TableRow
            android:layout_height="100dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:src="@drawable/hawaiianimg" />

            <Button
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/button_text4"
                android:onClick="createHawaiianOrder"/>

        </TableRow>

        <TableRow
            android:layout_height="100dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:src="@drawable/pepperoniimg" />

            <Button
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/button_text5"
                android:onClick="createPepperoniOrder" />

        </TableRow>

        <TableRow
            android:layout_height="100dp"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:onClick="order"
                android:src="@drawable/storeorders" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:onClick="orderList"
                android:src="@drawable/cart" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>