<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="411dp"
        android:layout_height="213dp"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="408dp"
                android:layout_height="46dp"
                android:layout_margin="0dp"
                android:width="3dp"
                android:text="@string/orderCart"
                android:textAlignment="center"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="0dp"
                app:autoSizeMinTextSize="0dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="144dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="40dp"
                        android:gravity="center_horizontal"
                        android:text="@string/number"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="117dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="40dp"
                        android:gravity="center_horizontal"
                        android:text="@string/subtotal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="97dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="40dp"
                        android:gravity="center_horizontal"
                        android:text="@string/tax" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="156dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="40dp"
                        android:gravity="center_horizontal"
                        android:text="@string/total" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="408dp"
        android:layout_height="212dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <ListView
            android:id="@+id/listView"
            android:layout_width="288dp"
            android:layout_height="159dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="396dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"/>

</androidx.constraintlayout.widget.ConstraintLayout>