<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrder">

    <TableLayout
        android:layout_width="395dp"
        android:layout_height="432dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TableRow
            android:layout_height="100dp"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_column="1"
                android:src="@drawable/imgbroken" />

            <TextView
                android:id="@+id/pizzaType"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:paddingTop="60dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/purple_500"/>

        </TableRow>

        <TableRow
            android:layout_height="80dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_column="1"
                android:text="Select Pizza Size:"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/purple_700"/>

            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="2"/>

        </TableRow>

        <TableRow
            android:layout_height="100dp"
            android:paddingTop="30dp">

            <TextView
                android:paddingLeft="10dp"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_column="1"
                android:text="All Toppings:"
                android:textSize="15dp"
                android:textColor="@color/purple_700"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_column="1"
                android:text="Selected Pizza Toppings:"
                android:textAlignment="center"
                android:textSize="15dp"
                android:textColor="@color/purple_700"/>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="395dp"
        android:layout_height="500dp"
        android:layout_marginTop="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_height="300dp">

            <ListView
                android:id="@+id/allToppings"
                android:layout_width="155dp"
                android:layout_height="300dp"
                android:layout_column="1" />

            <TableLayout
                android:layout_width="80dp"
                android:layout_column="2">

                <TableRow
                    android:layout_height="200dp"
                    android:paddingTop="80dp">

                    <Button
                        android:id="@+id/addButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addTopping"
                        android:text="@string/button_text6"
                        android:textSize="10dp" />

                </TableRow>

                <TableRow
                    android:layout_height="400dp"
                    android:paddingTop="50dp">

                    <Button
                        android:id="@+id/removeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="removeTopping"
                        android:text="@string/button_text7"
                        android:textSize="10dp" />

                </TableRow>

            </TableLayout>

            <ListView
                android:id="@+id/selectedToppings"
                android:layout_width="155dp"
                android:layout_height="300dp"
                android:layout_column="3" />

        </TableRow>

        <TableRow android:paddingTop="30dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_column="1"
                android:text="Price:"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/priceTextField"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_column="1"
                android:paddingRight="30dp"
                android:text="price"
                android:textAlignment="center"
                android:textSize="20dp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:onClick="addOrder"
                android:text="@string/button_text8"
                android:textSize="10dp" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>